# prod-hackathon-0811

./: .gitignore  Dockerfile  README.org  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_11_09_at17_03-9fa9ab23b1f4_asdsadas.py  4e80cc4ec11b_add_user_table.py  7bd4a4be012f_asd.py
app/api/: main.py
app/api/requests/: debt.py  event.py  link.py  trip.py  user.py  websocket.py
app/api/responses/: debt.py  event.py  link.py  trip.py  user.py
app/api/routes/: .#debt.py  debt.py  event.py  link.py  login.py  trip.py  users.py  websocket.py
app/internal/: config.py  security.py
app/internal/db/: __init__.py  core.py  models.py  other.py
app/internal/dependencies/: base.py  user.py
app/internal/repositories/: debt.py  events.py  links.py  trips.py
app/internal/services/: debt.py  events.py  links.py  trips.py  user.py  websocket.py
app/internal/websocket_messages/: debt.py  event.py
